avoid breaks in 2 column menus

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -186,6 +186,7 @@
     color: $text-color;
     font-size: 14px;
     transition: background ease 0.5s;
+    break-inside: avoid;
 
     @include grid-media($desktop-grid) {
       font-size: 14px;
